# yew-fpl-data

./: Cargo.toml  index.html  style.css  style.scss
src/: common.rs  main.rs
