[package]
name = "yew-fpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen-futures = "0.4"
reqwasm = "0.5.0"
serde_json = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
wasm-logger = "0.2"
log = "0.4"
yew-chart = "0.5.0"
chrono = { version = "0.4.22", features = ["serde", "wasmbind"] }
